FIX name margin not aligned

--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ section.section {
   font-size: 60px; 
   font-weight: 600; 
   line-height: 1; 
-  margin: -15px 0 10px; 
+  margin: -15px -5px 10px; 
   letter-spacing: -2px; 
 } 
  
